k8s/app/overlays/ingress/service-clusterip-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: sola-app
  namespace: sola-app
spec:
  type: ClusterIP
