k8s/app/overlays/ingress/sola-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sola-app-ingress
  namespace: sola-app
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: sola-app.ostc.si
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sola-app
            port:
              number: 8002
